--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
-    <header>
+    <header id="main-header">
         <h1>Play Tic, Tac, Toe </h1>
     </header>
 
@@ -23,8 +23,8 @@
                     <input type="text" name="playername" id="playername">
                 </div>
                 <div>
-                    <button type="button">Cancel</button>
-                    <button type="submit">Confirm</button>
+                    <button type="button" class="btn btn-alt">Cancel</button>
+                    <button type="submit" class="btn ">Confirm</button>
                 </div>
             </form>
         </aside>
@@ -35,7 +35,7 @@
                         <h2>Player 1</h2>
                         <h3>Player Name</h3>
                         <p>X</p>
-                        <button>Edit</button>
+                        <button class="btn btn-alt">Edit</button>
                     </article>
                 </li>
                 <li>
@@ -43,11 +43,11 @@
                         <h2>Player 2</h2>
                         <h3>Player Name</h3>
                         <p>O</p>
-                        <button>Edit</button>
+                        <button class="btn btn-alt">Edit</button>
                     </article> 
                 </li>
             </ol>
-            <button>Start New Game</button>
+            <button class="btn">Start New Game</button>
         </section>
         <section id="active-game">
             <article>
