--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/overlay.css">
+    <link rel="stylesheet" href="styles/configuration.css">
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
+    <div id="backdrop"></div>
     <header id="main-header">
         <h1>Play Tic, Tac, Toe </h1>
     </header>
 
     <main>
-        <aside>
+        <aside class="modal" id="config-overlay">
             <h2>Chosse your name</h2>
             <form >
-                <div>
+                <div class="form-control">
                     <label for="playername">Player name</label>
                     <input type="text" name="playername" id="playername">
                 </div>
