game-board  style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/overlay.css">
     <link rel="stylesheet" href="styles/configuration.css">
+    <link rel="stylesheet" href="styles/game.css">
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
@@ -53,13 +54,13 @@
             <button class="btn">Start New Game</button>
         </section>
         <section id="active-game">
-            <article>
-                <h3>You won, <span id="winner-name">Player Name</span>!</h3>
+            <article id="game-over">
+                <h2>You won, <span id="winner-name">Player Name</span>!</h2>
                 <p>Click "Start New Game" above, to start a new game!</p>
             </article>
 
             <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
-            <ol>
+            <ol id="game-board">
                 <li></li>
                 <li></li>
                 <li></li>
