--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="styles/overlay.css">
     <link rel="stylesheet" href="styles/configuration.css">
     <link rel="stylesheet" href="styles/game.css">
+    <script src="script/config.js" defer></script>
+    <script src="script/game.js" defer></script>
+    <script src="script/app.js" defer></script>
     <title>Tic Tac Toe Game</title>
 </head>
 <body>
@@ -20,7 +23,7 @@
 
     <main>
         <aside class="modal" id="config-overlay">
-            <h2>Chosse your name</h2>
+            <h2>Choose your name</h2>
             <form >
                 <div class="form-control">
                     <label for="playername">Player name</label>
@@ -39,7 +42,7 @@
                         <h2>Player 1</h2>
                         <h3>Player Name</h3>
                         <p class="player-symbol">X</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
                     </article>
                 </li>
                 <li>
@@ -47,7 +50,7 @@
                         <h2>Player 2</h2>
                         <h3>Player Name</h3>
                         <p class="player-symbol">O</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
                     </article> 
                 </li>
             </ol>
