--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/overlay.css">
     <link rel="stylesheet" href="styles/configuration.css">
@@ -29,8 +30,9 @@
                     <label for="playername">Player name</label>
                     <input type="text" name="playername" id="playername">
                 </div>
+                <p id="config-error"></p>
                 <div>
-                    <button type="button" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
+                    <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
                     <button type="submit" class="btn ">Confirm</button>
                 </div>
             </form>
